@@ -1,5 +1,16 @@
 2001-08-22  Kevin Vandersloot <kfv101@psu.edu>
 
+	* interface.c: make the graphs above each other to display
+	more history.
+
+	* load-graph.c: move the frame back behind the data. Do a crude
+	hack to check if the data has any value and don't draw a line
+	if not so. Gets rid of the line having to do with the fact that
+	the data for time periods before the app started is zero. Bump
+	the number of points up since we now have more space.
+
+2001-08-22  Kevin Vandersloot <kfv101@psu.edu>
+
 	* interface.c: add a new column to the disks showing used space.
 	center justify each element in the disk list.
 
